--- a/landingpage.css
+++ b/landingpage.css
@@ -5,6 +5,7 @@
 html * {
     margin: 0;
     padding: 0;
+
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -208,67 +209,118 @@ textarea {
     background-image: linear-gradient(rgb(0, 0, 0), rgb(28, 34, 109), rgb(0, 0, 0));
 }
 /*parte de reviews*/
-.reviews-section {
-    height: 100vh;
-    margin: 0;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 40px;
-    color: rgb(0, 0, 0);
-    text-align: center;
-    display: grid;
-    grid-gap: 15px;
-    grid-template-columns: 1fr;
-    overflow-y: auto;
-}
 
-.review {
-    display: flex;
-    align-items: center;
-    background-color: white;
-    border-radius: 15px; 
-    padding: 15px;
-    margin-bottom: 15px;
-}
-
-.review img {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 15px;
-}
-
-.reviews-section h2 {
+.titulo-review {
     color: rgb(149, 204, 255);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 40px;
     margin-bottom: 20px;
-    grid-column: 1 / -1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.review p {
-    line-height: 1.6;
+.review-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
-.review p:last-child {
-    margin-bottom: 0;
+.review-container{
+    padding: 28px calc(28px + 10px + 16px) 28px 28px;
+    background: #fff;
+    border-radius: 10px;
+    max-width: 600px;
+    width: 100%;
+    position: relative;
 }
 
-.review p strong {
-    font-weight: bold;
-    color: #065fd4;
+.review-wrapper{
+    overflow-y: auto;
+    scrollbar-width: none;
+    scroll-snap-type: y mandatory;
+    scroll-behavior: smooth;
 }
 
-.review p a {
-    color: #065fd4;
-    text-decoration: none;
-    font-weight: bold;
+.review-wrapper::-webkit-scrollbar{
+    display: none;
 }
 
-.review p a:hover {
-    text-decoration: underline;
+.review{
+    scroll-snap-align:center;
+    display: flex;
+    flex-direction: column;
 }
 
+.review-head{
+    margin-bottom: 16px;
+    display: flex;
+    grid-gap: 12px;
+    align-items: center;
+}
+
+.review img{
+    width: 48px;
+    height: 48px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.perfil-review h3{
+    font-size: 20px;
+    font-weight: 600;
+
+}
+
+.perfil-review p{
+    font-size: 14px;
+    font-weight: 500;
+    color: #888;
+
+}
+
+.review .texto {
+    flex-grow: 1;
+    margin-bottom: 16px;
+    max-height: 100px;
+    overflow-y: auto;
+    font-size: 20px;
+    line-height: 1.5;
+    text-overflow: ellipsis;
+    
+  }
+
+.review .valoracion i{
+    color: #F89805;
+}
+
+.review-indicador{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 28px;
+    display: flex;
+    flex-direction: column;
+    grid-gap: 8px;
+}
+
+.review-indicador a{
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: royalblue;
+    opacity: .5;
+}
+
+.review-indicador a:hover{
+    opacity: 1;
+}
+
+.review-indicador a.active{
+    box-shadow: 0 0 0 2px #fff, 0 0 0 4px royalblue;
+    opacity: 1;
+}
 
 /* Definición de Cuadrícula para la Sección de Contacto (contact-section) */
 .contact-section {
@@ -413,10 +465,6 @@ footer p{
         margin-top: 30px;
     }
 
-    .review img {
-        width: 40px; /* Reducir el tamaño de las imágenes de revisión */
-        height: 40px;
-    }
 
     .form {
         padding: 30px; /* Ajustar el espacio alrededor del formulario */
@@ -456,14 +504,6 @@ footer p{
         width: 100%;
     }
 
-    .reviews-section h2 {
-        font-size: 26px; /* Ajustar el tamaño del título de revisión para iPhone 12 Pro */
-    }
-
-    .review img {
-        width: 40px;
-        height: 40px;
-    }
 
     .contact-section {
         margin-top: 30px; 
@@ -534,16 +574,7 @@ footer p{
     
         .card {
             width: 100%;
-        }
-    
-        .reviews-section h2 {
-            font-size: 30px;
-        }
-    
-        .review img {
-            width: 40px;
-            height: 40px;
-        }
+        }    
     
         .contact-section {
             margin-top: 50px;
